# client-register

./: README.md  pyproject.toml  setup.py
debian/: changelog  control  copyright  lliurex-client-register-cli.install  lliurex-client-register-cli.pkexec  lliurex-client-register.dirs  lliurex-client-register.install  lliurex-client-register.pofiles  lliurex-client-register.postinst  lliurex-client-register.prerm  lliurex-client-register.zero  n4d-lliurex-client-register.install  n4d-lliurex-client-register.postinst  rules
lliurex-client-register-cli/: __init__.py  lliurex-client-register-cli
lliurex-client-register-cli.install/: lliurex-client-register-cli
lliurex-client-register.install/launcher/: lliurex-client-register
lliurex-client-register.install/logrotate.d/: CLIENT-REGISTER
lliurex-client-register.install/rsyslog.d/: 100-client-register.conf
lliurex-client-register.install/ui/: LliurexClientRegister.py  N4dManager.py  lliurex-client-register-gui.py  lliurex-client-register.py
lliurex-client-register.install/ui/rsrc/: ApplicationOptions.qml  ChangesDialog.qml  CustomPopup.qml  Loading.qml  MenuOptionBtn.qml  Settings.qml  lliurex-client-register.qml  login.qml
lliurex-client-register.zmds/: lliurex-client-register.app  lliurex-client-register.zmd
lliurex-po/: generate_po.sh
lliurex-po/lliurex-client-register/: ca@valencia.po  es.po  lliurex-client-register.pot
n4d-lliurex-client-register.install/config/: ClientRegisterManager.json
n4d-lliurex-client-register.install/src/: ClientRegisterManager.py
(+1 files in other folders)
