[build-system]
requires = ["setuptools","setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "lliurex-client-register-cli"
version = "0.1"
description = "Tool to configure thet cart assigned to laptop"
authors = [
	{ name = "Juan Ramon Pelegrina", email="juapesai@hotmail.com" },
	{ name = "LliureX Team"}
]
license = {text="GPL-3"}
urls = {repository="https://github.com/lliurex/client-register"}

[tool.setuptools]
packages = ["clientregistercli"]

[tool.setuptools.package-dir]
clientregistercli = "lliurex-client-register-cli"

[tool.setuptools.exclude-package-data]
clientregistercli = ["lliurex-client-register-cli"]

[tool.setuptools.data-files]
"sbin" = ["lliurex-client-register-cli/lliurex-client-register-cli"]
